--- a/default.css
+++ b/default.css
@@ -12,7 +12,7 @@ Supports Thumbs: true
 }
 #slideshow .nivoSlider {	
 	position:relative;
-	/* background:#fff url(../images/loading.gif) no-repeat 50% 50%; */
+	/* background:#fff url(images/loading.gif) no-repeat 50% 50%; */
     margin-bottom:10px;
     /* -webkit-box-shadow: 0px 1px 5px 0px #4a4a4a;
     -moz-box-shadow: 0px 1px 5px 0px #4a4a4a;
@@ -44,7 +44,7 @@ right: 0;
 	display:inline-block;
 	width:22px;
 	height:22px;
-	background:url(../images/bullets.png) no-repeat;
+	background:url(images/bullets.png) no-repeat;
 	text-indent:-9999px;
 	border:0;
 	margin: 0 2px;
@@ -57,7 +57,7 @@ right: 0;
 	display:block;
 	width:43px;
 	height:43px;
-	background:url(../images/slider-arrows.png) no-repeat;
+	background:url(images/slider-arrows.png) no-repeat;
 	text-indent:-9999px;
 	border:0;
 	opacity: 0;
