--- a/default.css
+++ b/default.css
@@ -57,7 +57,7 @@ right: 0;
 	display:block;
 	width:30px;
 	height:36px;
-	background:url(images/slider-arrows.png) no-repeat;
+	background:url(images/arrows.png) no-repeat;
 	text-indent:-9999px;
 	border:0;
 	opacity: 0;
