--- a/foundation.css
+++ b/foundation.css
@@ -1,4 +1,4 @@
-meta.foundation-version {
+imeta.foundation-version {
   font-family: "/{{ VERSION }}/"; }
 
 meta.foundation-mq-small {
@@ -732,7 +732,7 @@ select {
     position: relative;
     right: 91.66667%;
     left: auto; } }
-@media only screen and (min-width: 45em) {
+@media only screen and (min-width: 48em) {
 	.win-6{width: 50%;}
 }
 @media only screen and (min-width: 64.063em) {
