--- a/foundation.css
+++ b/foundation.css
@@ -731,8 +731,7 @@ select {
   .pull-11 {
     position: relative;
     right: 91.66667%;
-    left: auto; } }
-@media only screen and (min-width : 604px) {
+    left: auto; } }@media only screen and (min-device-width : 360px) and (max-device-width : 598px) { 
 	.win-6{width: 50%;}
 }
 @media only screen and (min-width: 64.063em) {
