--- a/foundation.css
+++ b/foundation.css
@@ -1270,7 +1270,7 @@ meta.foundation-mq-topbar {
     margin-bottom: 0;
     list-style: none; }
   .top-bar .row {
-    max-width: none; }
+     }
   .top-bar form,
   .top-bar input {
     margin-bottom: 0; }
