--- a/foundation.css
+++ b/foundation.css
@@ -1529,8 +1529,7 @@ meta.foundation-mq-topbar {
 
 .js-generated {
   display: block; }
-
-@media only screen and (min-width: 40.063em) {
+@media only screen and (min-width: 1000px;) {
   .top-bar {
     background: #007DAD;
     overflow: visible; }
@@ -1686,6 +1685,8 @@ meta.foundation-mq-topbar {
     overflow: visible;
     clip: auto;
     position: absolute !important; } }
+
+  
 .breadcrumbs {
   display: block;
   padding: 0.5625rem 0.875rem 0.5625rem;
