--- a/foundation.css
+++ b/foundation.css
@@ -1530,7 +1530,7 @@ meta.foundation-mq-topbar {
 .js-generated {
   display: block; }
 
-@media only screen and (min-width: 40.063em) {
+@media only screen and (min-width: 900px) {
   .top-bar {
     background: #333333;
     overflow: visible; }
