--- a/mamnonsaomai/css/style.css
+++ b/mamnonsaomai/css/style.css
@@ -55,14 +55,15 @@ margin-left: 15px;
 .w_page_content{
 	padding: 10px;
 	padding-top:0px;
-	width: 1078px;
+	width: 1080px;
 	margin: 0px auto;
 	box-shadow:0px 0px 5px #999;
 	-webkit-box-shadow:0px 0px 5px #999;
 	-moz-box-shadow:0px 0px 5px #999;
 	-o-box-shadow:0px 0px 5px #999;
 	border-top: 0px;
-	border-bottom: 0px;
+	background-color: #fff;
+border-radius: 0px 0px 5px 5px;
 }
 #header{
 	height: 235px;
