--- a/mamnonsaomai/css/style.css
+++ b/mamnonsaomai/css/style.css
@@ -30,14 +30,14 @@ body {
 	color: #444;
 	line-height: 1.5;
 	font-family: Arial, Helvetica, sans-serif;
-	
+	background: url("../images/repeat.jpg") repeat;
 	font-size: 12px/2;
 }
 .wp{
 	width: 1100px;
 	margin: 0px auto;
 }
-.w-page{	background: url("../images/footer.png") bottom center no-repeat;}
+.w-page{	background: url("../images/foo.jpg") bottom center no-repeat;}
 .w-content{min-height: 500px;width: 1080px;}
 .w-left{
 	float: left;
