--- a/mamnonsaomai/css/style.css
+++ b/mamnonsaomai/css/style.css
@@ -478,20 +478,20 @@ padding-left: 55px;
 padding-right: 8px;
 }*/
 .nhatkycuabe{
-	background: url(../images/owl.png) top center no-repeat;
-	height: 222px;
+	background: url(../images/nhatkycuabe.jpg) top center no-repeat;
+	height: 280px;
 	position: relative;
 }
 .ul_nhatky{
     position: absolute;
-    left: 80px;
-    top: 95px;
+    left: 60px;
+    top: 171px;
 }
 .ul_nhatky li{
-    padding: 0px 3px;
+    padding: 3px;
 }
 .ul_nhatky a{
-    color: rgb(21, 178, 218);font-size: 14px;
+    color: rgb(21, 178, 218);
 }
 .ul_nhatky a:hover{color:#333;}
 .item_block{
