--- a/mamnonsaomai/css/style.css
+++ b/mamnonsaomai/css/style.css
@@ -941,7 +941,10 @@ top: 15px;
 padding-left: 16px;
 }
 
-
-
+.hotro{background: url(../images/owl.png) left top no-repeat;
+	 position: relative;
+	height:222px;
+}
+.hotro .block_content{border:0px;}
 
 
