--- a/mamnonsaomai/css/style.css
+++ b/mamnonsaomai/css/style.css
@@ -947,4 +947,17 @@ padding-left: 16px;
 }
 .hotro .block_content{border:0px;}
 
-
+.hotro .title_hotro{
+position: absolute;
+left: 84px;
+top: 13px;
+color: red;
+text-transform: uppercase;
+font-weight: bold;
+}
+.support{
+position: absolute;
+left: 78px;
+width: 143px;top: 55px;
+}
+.support img{width:60px;}
