--- a/mamnonsaomai/css/style.css
+++ b/mamnonsaomai/css/style.css
@@ -38,7 +38,7 @@ body {
 	margin: 0px auto;
 }
 .w-page{	background: url("../images/foo.jpg") right bottom no-repeat;}
-.w-content{min-height: 500px;width: 1080px;}
+.w-content{min-height: 500px;width: 1090px;}
 .w-left{
 	float: left;
 	width: 240px;
@@ -50,22 +50,23 @@ margin-left: 15px;
 }
 .w-right{
 	float: right;
-	width: 240px;
+	width: 250px;
 	/*background: url(../images/huou.png) top right no-repeat;*/
 }
 }
 .w_page_content{
 	padding: 10px;
 	padding-top:0px;
-	width: 1080px;
+	width: 1090px;
 	margin: 0px auto;
-	box-shadow:0px 0px 5px #999;
-	-webkit-box-shadow:0px 0px 5px #999;
-	-moz-box-shadow:0px 0px 5px #999;
-	-o-box-shadow:0px 0px 5px #999;
+	box-shadow:0px 2px 8px #999;
+	-webkit-box-shadow:0px 2px 8px #999;
+	-moz-box-shadow:0px 2px 8px #999;
+	-o-box-shadow:0px 2px 8px #999;
 	border-top: 0px;
 	background-color: #fff;
 	border-radius: 0px 0px 5px 5px;
+	padding-right:0px;
 }
 #header{
 	height: 235px;
