--- a/mamnonsaomai/css/style.css
+++ b/mamnonsaomai/css/style.css
@@ -942,7 +942,7 @@ top: 15px;
 padding-left: 16px;
 }
 
-.hotro{background: url(../images/owl.png) left top no-repeat;
+.hotro{background: url(../images/bg_hotline.jpg) left top no-repeat;
 	 position: relative;
 	height:222px;
 }
