--- a/mamnonsaomai/css/style.css
+++ b/mamnonsaomai/css/style.css
@@ -37,7 +37,7 @@ body {
 	width: 1100px;
 	margin: 0px auto;
 }
-.w-page{	background: url("../images/foo.jpg") right bottom no-repeat;}
+.w-page{	background: url("../images/bg.png") top no-repeat;}
 .w-content{min-height: 500px;width: 1090px;}
 .w-left{
 	float: left;
@@ -762,7 +762,7 @@ border-bottom: 0.1244em dashed rgba(202, 202, 202, 0.41);
 position: relative;
 width: 1100px;
 margin: 0px auto;
-	color: #fff;
+	color: #fff;background: url("../images/foo.jpg") right bottom no-repeat;
 }
 .bt_foo {
 position: absolute;
