--- a/mamnonsaomai/css/style.css
+++ b/mamnonsaomai/css/style.css
@@ -757,12 +757,15 @@ padding-bottom: 10px;
 border-bottom: 0.1244em dashed rgba(202, 202, 202, 0.41);
 }
 /****************************************************/
+.bg_foo{
+background: url("../images/foo.jpg") right bottom no-repeat;
+}
 .footer{
 	min-height: 420px;
 position: relative;
 width: 1100px;
 margin: 0px auto;
-	color: #fff;background: url("../images/foo.jpg") right bottom no-repeat;
+	color: #fff;
 }
 .bt_foo {
 position: absolute;
