--- a/mamnonsaomai/css/style.css
+++ b/mamnonsaomai/css/style.css
@@ -809,7 +809,7 @@ top: 15px;
 	color:#fff;}
 .foo_face{
 	width: 700px;
-	background: transparent url('../images/foo_face.png');
+	background: transparent url('../images/bg_f.png');
 	position: absolute;
 	height: 170px;
 	top: 124px;
