--- a/phunu-giadinh/css/style.css
+++ b/phunu-giadinh/css/style.css
@@ -34,7 +34,7 @@ body {
 	font-size: 12px/2;
 }
 #header{
-	height: 140px;
+	height: 120px;
 	/* background: url(../images/banner_top.jpg) no-repeat; */
 }
 #logo a{
@@ -45,10 +45,7 @@ body {
 	text-indent: -99999999px;margin-top: 25px;*/
 	z-index: 100000000000000000000000;
 }
-#logo img{
-	width: auto;
-  height: auto;
-  max-width: 100%;
+#logo img{padding-top:15px;
 }
 @media only screen and (min-width: 40.063em) {
 .top-bar-section li:not(.has-form) a:not(.button){
