--- a/phunu-giadinh/css/style.css
+++ b/phunu-giadinh/css/style.css
@@ -362,7 +362,7 @@ height: 27px;
 	margin-bottom: 15px;
 }
 .bt_title h3{
-	font-family: "VNF-Oswald";
+	font-family: Arial;
 	font-size: 25px;
 	text-transform: uppercase;
 	color: #646464;
@@ -490,12 +490,12 @@ height: 27px;
 .flexslider:hover .flex-next { opacity: 0.7; right: 10px; }
 .flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover { opacity: 1; }
 .flex-direction-nav .flex-disabled { opacity: 0!important; filter:alpha(opacity=0); cursor: default; }
-/* .flex-direction-nav a:before  { font-family: "flexslider-icon"; font-size: 40px; line-height:1; display: inline-block; content: '\f001'; }
+/* .flex-direction-nav a:before  { font-family: Arial; font-size: 40px; line-height:1; display: inline-block; content: '\f001'; }
 .flex-direction-nav a.flex-next:before  { content: '\f002'; }
  */
 /* Pause/Play */
 .flex-pauseplay a { display: block; width: 20px; height: 20px; position: absolute; bottom: 5px; left: 10px; opacity: 0.8; z-index: 10; overflow: hidden; cursor: pointer; color: #000; }
-.flex-pauseplay a:before  { font-family: "flexslider-icon"; font-size: 20px; display: inline-block; content: '\f004'; }
+.flex-pauseplay a:before  { font-family: Arial; font-size: 20px; display: inline-block; content: '\f004'; }
 .flex-pauseplay a:hover  { opacity: 1; }
 .flex-pauseplay a.flex-play:before { content: '\f003'; }
 
