--- a/phunu-giadinh/css/style.css
+++ b/phunu-giadinh/css/style.css
@@ -190,8 +190,9 @@ background: url(../images/title-line.png) repeat-x left bottom;
 .row .list_r{
 	margin-left: -10px;
 }
+#featured .f_img{text-align:center;display:block;}
 #featured img{
-	width: 100%;
+	
 	height: 262px;
 }
 .list_a{
