--- a/lamdep/css/style.css
+++ b/lamdep/css/style.css
@@ -957,11 +957,11 @@ div.info-hotrokt span {
 	color: #f55438;
 }
 .zalo{
-	background:url(../img/zalo.png) no-repeat;
+	background:url(../img/zalo.png) left center no-repeat;
 	padding-left:55px;
 }
 .viber{
-	background:url(../img/viber.png) no-repeat;
+	background:url(../img/viber.png) left center no-repeat;
 	padding-left:55px;
 }
 
