--- a/lamdep/css/style.css
+++ b/lamdep/css/style.css
@@ -438,7 +438,9 @@ body { /* background: #008fc3 url(../img/page.png); */
 	transform: skew(-13deg, 0);
 	content: "";
 }
-
+.block_title_color,.block_title_color:after{
+background-color: #C61AF5;
+}
 ._rgt .rgt_title {
 	display: block;
 	text-align: center;
@@ -909,7 +911,7 @@ div.boxhohokythuat {
 div.boxhohokythuat li {
 	list-style: none;
 	float: left;
-	width: 313px;
+	width: 100%;
 	margin-bottom: 15px;
 }
 
