--- a/lamdep/css/style.css
+++ b/lamdep/css/style.css
@@ -356,7 +356,7 @@ body { /* background: #008fc3 url(../img/page.png); */
 	left: 0px;
 }
 
-.p_price .view_rgt {
+.p_price .view_rgt,.p_price .view_lft {
 	position: absolute;
 	right: 10px;
 	-webkit-transform: skew(-13deg, 0);
@@ -369,11 +369,13 @@ body { /* background: #008fc3 url(../img/page.png); */
 	font-size: 14px;
 }
 
-.p_price .view_rgt:hover {
+.p_price .view_rgt:hover,.p_price .view_lft:hover {
 	background-color: #00a5ea;
 	color: #fff;
 }
-
+.p_price .view_lft{
+	left:5px;
+}
 #bt_content {
 	background: url("../img/left-bt.png") no-repeat scroll 0 0;
 	padding: 0 0 0 15px;
