--- a/lamdep/css/style.css
+++ b/lamdep/css/style.css
@@ -970,10 +970,10 @@ div.info-hotrokt span {
 	padding-left:55px;
 }
 .block_title_color{
-background-color: #C61AF5;
+background-color: #ff0084;
 }
 .block_title_color:after{
-background-color: #C61AF5;
+background-color: #ff0084;
 }
 
 
