--- a/lamdep/css/style.css
+++ b/lamdep/css/style.css
@@ -976,6 +976,389 @@ background-color: #ff0084;
 background-color: #ff0084;
 }
 
+#dialog {position:absolute; width:425px; padding:10px; z-index:10000;opacity:1;}
+#dialog-header {display:block; position:relative; width:100%; padding:3px 6px 7px; height:25px; font-size:14px; font-weight:bold}
+#dialog-title {float:left}
+#dialog-close {float:right; cursor:pointer; margin:3px 3px 0 0; height:11px; width:11px; background:url(https://foldercss.googlecode.com/svn/trunk/images/dialog_close.gif) no-repeat}
+#dialog-content {display:block; height:160px; padding:6px; color:#666666; font-size:13px}
+#dialog-mask {position:absolute; top:0; left:0; min-height:100%; width:100%; background:#FFF; opacity:0.2; z-index:100}
+.error {background:#fff url(https://foldercss.googlecode.com/svn/trunk/images/error_bg.jpg) bottom right no-repeat; border:1px solid #924949; border-top:none}
+.errorheader {background:url(https://foldercss.googlecode.com/svn/trunk/images/error_header.gif) repeat-x; color:#6f2c2c; border:1px solid #924949; border-bottom:none}
+.warning {background:#fff url(https://foldercss.googlecode.com/svn/trunk/images/warning_bg.jpg) bottom right no-repeat; border:1px solid #c5a524; border-top:none}
+.warningheader {background:url(https://foldercss.googlecode.com/svn/trunk/images/warning_header.gif) repeat-x; color:#957c17; border:1px solid #c5a524; border-bottom:none}
+.success {background:#fff url(https://foldercss.googlecode.com/svn/trunk/images/success_bg.jpg) bottom right no-repeat; border:1px solid #60a174; border-top:none}
+.successheader {background:url(https://foldercss.googlecode.com/svn/trunk/images/success_header.gif) repeat-x; color:#3c7f51; border:1px solid #60a174; border-bottom:none}
+.prompt {background:#fff url(https://foldercss.googlecode.com/svn/trunk/images/prompt_bg.jpg) bottom right no-repeat; border:1px solid #4f6d81; border-top:none}
+.promptheader {background:url(https://foldercss.googlecode.com/svn/trunk/images/prompt_header.gif) repeat-x; color:#355468; border:1px solid #4f6d81; border-bottom:none}
+
+
+
+
+
+.w-giaban,.gia_ban b{color:red;font-size:20px;}
+.tong_cart{
+color: red;
+font-weight: bold;
+font-size: 15px;
+}
+.tongtien{color: rgb(255, 8, 8);
+font-size: 20px;
+font-weight: bold;}
+.a_nganluong{
+display: inline-block;
+width: 100px;
+height: 28px;
+background: url(https://foldercss.googlecode.com/svn/trunk/images/btn-nganluong.png) no-repeat;
+float: right;
+text-indent: -99999px;
+}
+.a_thanhtoan{
+display: inline-block;
+width: 119px;
+height: 28px;
+background: url(https://foldercss.googlecode.com/svn/trunk/images/btn-muangay.png) no-repeat;
+float: left;
+text-indent: -99999px;
+}
+#block {width:100%;margin:0 auto;}
+#block .top {border: 1px solid #e2e2e2;padding:2px 3px 3px 2px;position:relative;overflow:hidden;}
+#block .top .cart {width:100px;float:left;}
+#block .top .cart i{border-radius: 100px;
+display: inline-block;
+background-color: #ff0084;
+padding:10px;
+margin-right: 5px;
+color: #fff;}
+#block .top .active {background:url(img/a.cart.png) no-repeat 0px -64px;}
+#block .top .active:hover {background:url(img/a.cart.png) no-repeat 0px -64px;}
+#block .top .path {padding-left:2px;position:relative;overflow:hidden;padding-top: 5px;
+	}
+#block .top .path li {float:left;overflow:hidden;}
+#block .top .path li a {color:#000;font-size:11px;padding:0 7px 0 8px;}
+#block .top .path li a.first {background:url(img/ul.path-li-a.first.gif) no-repeat right;}
+
+#block form {padding:5px;z-index:100000;background:#333 url(https://foldercss.googlecode.com/svn/trunk/images/ul-1top.png) top no-repeat; width:245px;padding-top:7px;margin-top:2px;display:none;position:absolute;}
+#block form .cartHeaders{display:none;}
+#block .itemName{
+color: #fff;
+width: 122px;
+font-size: 14px;
+line-height: 1.3;
+float: left;
+}
+#block .itemPrice{
+float: left;
+width: 73px;
+color: rgb(245, 45, 45);
+}
+#block .itemQuantity{
+float: left;
+color: #fff;
+text-align: center;
+width: 30px;
+}
+/*#block .itemTotal{clear: both;
+width: 0px;
+height: 0px;
+text-indent: -9999px;}
+*/
+#block .itemRemove{
+float: right;
+}
+#block .itemRemove a{color:red;}
+#block .itemContainer{margin-bottom: 10px;
+border-bottom: 1px solid #6F6F6F;
+padding-bottom: 6px;}
+.top_web{padding-top:27px;}
+.top_web .fa-phone{font-size:35px;}
+#top_menu{margin-top:0px;}
+#logo {
+ text-align: left; 
+}
+[class*="column"] + [class*="column"]:last-child{float:left;}
+.b_thumb img {
+height: 100%;
+}
+.p_title {
+height: 48px;
+overflow: hidden;
+}
+	.w-detail{background-color: #fff;box-shadow: 2px 3px 3px #ccc;padding: 10px;}
+.w-detail .title{
+font-size: 1.2em;
+color: #007DAD;
+margin-bottom: 10px;
+}
+.detail_img{
+float: left;
+border: 1px solid rgb(180, 180, 180);
+padding: 2px;
+background: #DDD;
+padding-bottom: 0px;
+}
+.detail_img img{
+width: 450px;
+}
+.detail_img img:hover{opacity:0.8;}
+.detail_info{
+margin-left: 470px;
+}
+.detail_info b{padding-right: 5px;}
+.detail_info span{
+color:#333333;
+}
+.d_price span{
+color: #a80006;font-size: 30px
+}
+.r-tabs .r-tabs-nav {
+margin: 0;
+padding: 0;
+}
+.r-tabs .r-tabs-tab {
+display: inline-block;
+margin: 0;
+list-style: none;
+}
+.r-tabs .r-tabs-accordion-title {
+display: none;
+}
+.r-tabs .r-tabs-panel.r-tabs-state-active {
+display: block;
+}
+@media only screen and (max-width: 768px) {
+.r-tabs .r-tabs-nav {
+display: none;
+}
+.r-tabs .r-tabs-accordion-title {
+display: block;
+}
+}
+.r-tabs {
+position: relative;
+}
+.r-tabs .r-tabs-nav {
+border-bottom: 1px solid #e4e4e4;
+}
+.r-tabs .r-tabs-nav .r-tabs-tab {
+position: relative;
+top: 1px;margin-right: 5px;
+}
+.r-tabs .r-tabs-nav a {
+background: #fff;/* #00aadd;*/
+padding: 10px 12px;
+display: inline-block;
+text-decoration: none;
+color: #000;
+font-weight: bold;
+border: 1px solid #ccc;
+height: 27px;
+}
+.r-tabs .r-tabs-accordion-title a {
+display: block;
+padding: 10px;
+background-color: #00aadd;
+color: #fff;
+text-decoration: none;
+margin-bottom: 3px;
+}
+.r-tabs .r-tabs-nav a.active {
+background-color: #fff;
+border-top: 3px solid #00aadd;
+border-right: 1px solid #e4e4e4;
+border-left: 1px solid #e4e4e4;
+color: #00aadd;
+height: 28px;
+border-bottom: 0px;
+border-radius: 3px 3px 0px 0px;
+}
+.tabs-container{
+border-right: 1px solid #ccc;
+border-bottom: 1px solid #ccc;
+border-left: 1px solid #ccc;
+margin-bottom: 3px;
+padding: 15px;
+}
+.tabs_lft
+{
+float:left;
+width:300px;
+}
+.tabs_rgt
+{
+float:right;
+width:300px;
+}
+.t_tile
+{
+background-color: #bcd6eb;
+color: #055699;
+padding: 2px 5px;
+font-weight: bold;
+margin-bottom: 5px;
+}
+.tabs_lien_he span
+{
+display:inline-block;
+width:90px;
+color: #3761CE;
+}
+}
+.top_more{
+	width: 100%;
+	height: 100%;	
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-transform: skew(-13deg, 0);
+	-moz-transform: skew(-13deg, 0);
+	-ms-transform: skew(-13deg, 0);
+	-o-transform: skew(-13deg, 0);
+	transform: skew(-13deg, 0);
+	background-color: #00a5ea;
+	height: 70px;
+	padding: 10px 0px;
+	opacity:0.6;
+}
+._rgt{padding-left: 20px;float: right;}
+.tin_tuc{
+	clear: both;margin-bottom: 30px;
+	border-bottom: 1px solid #E9E7E7;
+}
+
+.tin_tuc h2{
+	padding-bottom: 10px;
+border-bottom: 1px solid #E9E7E7;
+margin-bottom: 10px;
+}
+.tin_tuc h2 a{
+	font-size: 26px;
+	line-height: 1.3em;
+	color: #585858;
+	font-weight: bold;
+	
+}
+.tin_tuc h2 a:hover{
+	text-decoration: underline;
+}
+.tin_tuc .more {
+	display: block;
+text-align: center;
+font-size: 20px;
+line-height: 24px;
+text-transform: uppercase;
+position: relative;
+z-index: 0;
+font-style: italic;
+width: 300px;
+float: right;
+}
+
+.tin_tuc .more>a {
+	display: inline-block;
+	position: relative;
+	z-index: 0;
+	color: #fff;
+	padding: 0px 15px;
+	font-size: 13px;
+}
+
+.tin_tuc .more>a:after {
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	content: "";
+	position: absolute;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	z-index: -1;
+	-webkit-transform: skew(-13deg, 0);
+	-moz-transform: skew(-13deg, 0);
+	-ms-transform: skew(-13deg, 0);
+	-o-transform: skew(-13deg, 0);
+	transform: skew(-13deg, 0);
+	background-color: #00a5ea;
+}
+
+.tin_tuc .more:after {
+	width: 100%;
+	height: 1px;
+	content: "";
+	top: 50%;
+	left: 0;
+	position: absolute;
+	z-index: -1;
+	background-color: #00a5ea;
+}
+.tin_tuc .more a:hover{color: yellow;}
+.boxbuy .soluong{width: 25%;
+float: left;}
+.boxbuy .soluong input{text-align: center;
+border: 1px solid #ff0084;}
+.btnMore {
+	display: block;
+text-align: center;
+font-size: 20px;
+line-height: 16px;
+text-transform: uppercase;
+position: relative;
+z-index: 0;
+font-style: italic;
+width: 75%;
+float: right;
+}
+
+.btnMore>a {
+	display: inline-block;
+	position: relative;
+	z-index: 0;
+	color: #fff;
+	padding: 10px 20px;
+	font-size: 16px;
+}
+.btnMore>a:after {
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	content: "";
+	position: absolute;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	z-index: -1;
+	-webkit-transform: skew(-13deg, 0);
+	-moz-transform: skew(-13deg, 0);
+	-ms-transform: skew(-13deg, 0);
+	-o-transform: skew(-13deg, 0);
+	transform: skew(-13deg, 0);
+	background-color: #ff0084;
+}
+
+.btnMore:after {
+	width: 100%;
+	height: 1px;
+	content: "";
+	top: 50%;
+	left: 0;
+	position: absolute;
+	z-index: -1;
+	background-color:#ff0084;
+}
+.btnMore a:hover{color: yellow;}
+.h_phone{
+
+	color: red;
+	
+	font-size: 20px;
+}
+@media only screen and (min-width: 64.063em)
+.large-6 {
+line-height: 35px;
+text-align: justify;
+}}
+div.info-hotrokt p.h_zalo{color: red;}
 
 
 
