--- a/lamdep/css/style.css
+++ b/lamdep/css/style.css
@@ -980,7 +980,7 @@ background-color: #ff0084;
 #dialog-header {display:block; position:relative; width:100%; padding:3px 6px 7px; height:25px; font-size:14px; font-weight:bold}
 #dialog-title {float:left}
 #dialog-close {float:right; cursor:pointer; margin:3px 3px 0 0; height:11px; width:11px; background:url(https://foldercss.googlecode.com/svn/trunk/images/dialog_close.gif) no-repeat}
-#dialog-content {display:block; height:160px; padding:6px; color:#666666; font-size:13px}
+#dialog-content {display:block;padding:6px; color:#666666; font-size:13px}
 #dialog-mask {position:absolute; top:0; left:0; min-height:100%; width:100%; background:#FFF; opacity:0.2; z-index:100}
 .error {background:#fff url(https://foldercss.googlecode.com/svn/trunk/images/error_bg.jpg) bottom right no-repeat; border:1px solid #924949; border-top:none}
 .errorheader {background:url(https://foldercss.googlecode.com/svn/trunk/images/error_header.gif) repeat-x; color:#6f2c2c; border:1px solid #924949; border-bottom:none}
