--- a/shoplamdep/css/style.css
+++ b/shoplamdep/css/style.css
@@ -765,6 +765,92 @@ padding-left: 10px;}
 .top-lft .cl-br{border-right: 0px;}
 .top-lft .cl-pl{padding-left: 0px;}
 
+.w-giaban,.gia_ban b{color:red;font-size:20px;}
+.tong_cart{
+color: red;
+font-weight: bold;
+font-size: 15px;
+}
+.tongtien{color: rgb(255, 8, 8);
+font-size: 20px;
+font-weight: bold;}
+.a_nganluong{
+display: inline-block;
+width: 100px;
+height: 28px;
+background: url(https://foldercss.googlecode.com/svn/trunk/images/btn-nganluong.png) no-repeat;
+float: right;
+text-indent: -99999px;
+}
+.a_viewcart{
+display: inline-block;
+width: 114px;
+height: 28px;
+background: url(https://foldercss.googlecode.com/svn/trunk/images/bg_viewcart.png) no-repeat;
+float: right;
+text-indent: -99999px;
+}
+.a_thanhtoan{
+display: inline-block;
+width: 119px;
+height: 28px;
+background: url(https://foldercss.googlecode.com/svn/trunk/images/bg_buycart.png) no-repeat;
+float: left;
+text-indent: -99999px;
+}
+#block {width:100%;margin:0 auto;}
+#block .top {border: 1px solid #e2e2e2;padding:2px 3px 3px 2px;position:relative;overflow:hidden;}
+#block .top .cart {width:100px;float:left;}
+#block .top .cart i{border-radius: 100px;
+display: inline-block;
+background-color: #ff0084;
+padding:10px;
+margin-right: 5px;
+color: #fff;}
+#block .top .active {background:url(img/a.cart.png) no-repeat 0px -64px;}
+#block .top .active:hover {background:url(img/a.cart.png) no-repeat 0px -64px;}
+#block .top .path {padding-left:2px;position:relative;overflow:hidden;padding-top: 5px;
+	}
+#block .top .path li {float:left;overflow:hidden;}
+#block .top .path li a {color:#000;font-size:11px;padding:0 7px 0 8px;}
+#block .top .path li a.first {background:url(img/ul.path-li-a.first.gif) no-repeat right;}
+
+#block form {padding:5px;z-index:100000;background:#333 url(https://foldercss.googlecode.com/svn/trunk/images/ul-1top.png) top no-repeat; width:245px;padding-top:7px;margin-top:2px;display:none;position:absolute;}
+#block form .cartHeaders{display:none;}
+#block .itemName{
+color: #fff;
+width: 122px;
+font-size: 14px;
+line-height: 1.3;
+float: left;
+}
+#block .itemPrice{
+float: left;
+width: 73px;
+color: rgb(245, 45, 45);
+}
+#block .itemQuantity{
+float: left;
+color: #fff;
+text-align: center;
+width: 30px;
+}
+/*#block .itemTotal{clear: both;
+width: 0px;
+height: 0px;
+text-indent: -9999px;}
+*/
+#block .itemRemove{
+float: right;
+}
+#block .itemRemove a{color:red;}
+#block .itemContainer{margin-bottom: 10px;
+border-bottom: 1px solid #6F6F6F;
+padding-bottom: 6px;}
+.top_web{padding-top:27px;}
+.top_web .fa-phone{font-size:35px;}
+#block .itemdecrement,#block .itemincrement,#block .itemtotal{display: none;}
+
 
 
 
