--- a/shoplamdep/css/style.css
+++ b/shoplamdep/css/style.css
@@ -912,13 +912,56 @@ div.info-hotrokt span {
 	background:url(../img/viber.png) left center no-repeat;
 	padding-left:55px;
 }
-.block_title_color{
-background-color: #ff0084;
-}
-.block_title_color:after{
-background-color: #ff0084;
-}
 
+/**********************/
+.item{z-index:1000;}
+      form .entry_donhang{
+      background: none;
+      border: none;
+      min-height: 350px;font-size:18px;
+      }
+      form .entry_name{
+          color:red;
+          font-size:20px;
+      }
+      form .btn_buynow{
+      background: url(https://foldercss.googlecode.com/svn/trunk/images/button-dat-hang-ngay.png) no-repeat;
+      width: 160px;
+      height: 65px;
+      border: none;
+      text-indent: -9999px;
+      }
+      form .btn_buynow:hover{opacity:0.8;}#block .top .path li a {
+color: #fff;}.p_title {
+height: 48px;
+overflow: hidden;
+}[class*="column"] + [class*="column"]:last-child {
+  float: left; }#block .top{border:0px;}
+.boxbuy .soluong input {
+text-align: center;
+border: 1px solid #ff0084;width:50px;
+}.soluong{float:left;}
+.btnMore {
+display: block;
+font-size: 19px;
+line-height: 16px;
+text-transform: uppercase;
+position: relative;
+z-index: 0;
+font-style: italic;
+width: 134px;
+height: 37px;
+float: left;
+margin-left: 20px;
+background: url(https://foldercss.googlecode.com/svn/trunk/shoplamdep/images/buy-big.png) no-repeat;
+padding-top: 11px;
+padding-left: 38px;
+}.btnMore a{color: #fff;
+font-weight: bold;
+font-size: 18px;}.breadcrumbs > * {
+line-height: 1.3;
+text-transform: none;
+font-size: 13px;color: #FF0084;}
 
 
 
